[package]
name = "ll"
version = "0.1.0"
authors = ["Matt Butcher <matt.butcher@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
clap = "2.33.0"
size_format = "1.0.2"
chrono = "0.4.10"
colorful = "0.2.1"
